Aggregation of prices